--- a/portocred/angular.json
+++ b/portocred/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
+                "input": "src/portocred.scss"
+              },
               "src/styles.css"
             ],
             "scripts": []
